--- a/index.html
+++ b/index.html
@@ -130,6 +130,10 @@ margin-right:0.5px;
 				color: white !important;
 			}
 			
+			#microblogdiv h3 {
+			margin:0;	
+			}
+			
 	</style>
 	</head>
 	<body>
