--- a/index.html
+++ b/index.html
@@ -338,6 +338,8 @@ I8,      ,8'
 	
 		<div id="microblogdiv" style="color:white;font-family: 'Times New Roman', Times, serif; background: linear-gradient(33deg, rgba(2,0,36,1) 0%, rgba(13,13,148,1) 100%);width:20%;margin-left:-15%;position:absolute;height:300px;overflow:scroll;padding:5px;">
 	<h3>microblog feed</h3>
+				<h5>11/25/22</h5>
+<p style="font-size:13;line-height:14px">In Canada, transcripts of parliamentary debates are known as the Hansard. They are published in both English and French. Wikipedia contains this goofy yet somewhat improbable claim: "In one instance, during a Liberal filibuster in the Senate of Canada, Senator Philippe Gigantès was accused of reading one of his books only so that he could get the translation for free through the Hansard." This could be an interesting topic of research.</p>
 	<h5>11/23/22</h5>
 <p style="font-size:13;line-height:14px">Today I came across Sergey Prokudin-Gorsky, a Russian photographer-chemist who traveled across the Russian Empire in the early 20th century to take color photographs of its people and landscapes. Prokudin-Gorsky made use of the "three-color method," wherein black-and-white photos are taken through red, green, and blue filters. The Library of Congress undertook a project in 2000 to digitize Prokudin-Gorsky's photo triplets and later to reconstruct color images based on these. Check out the results <a href="https://www.loc.gov/collections/prokudin-gorskii/?sp=2">here</a>. Very neat stuff.</p>
 	</div>
