--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
 	<head>
+		     <meta name="description" content="the personal website of james underwood"> 
 		<title>JamesUnderwood.net ???</title>
 		<style>
 		body {
