--- a/index.html
+++ b/index.html
@@ -339,6 +339,8 @@ I8,      ,8'
 	
 		<div id="microblogdiv" style="color:white;font-family: 'Times New Roman', Times, serif; background: linear-gradient(33deg, rgba(2,0,36,1) 0%, rgba(13,13,148,1) 100%);width:20%;margin-left:-15%;position:absolute;height:300px;overflow:scroll;padding:5px;">
 	<h3>microblog feed</h3>
+			<h5>12/10/22</h5>
+			<p style="font-size:13;line-height:14px">ChatGPT is fun.</p>
 				<h5>11/25/22</h5>
 <p style="font-size:13;line-height:14px">In Canada, transcripts of parliamentary debates are known as the Hansard. They are published in both English and French. Wikipedia contains this goofy yet somewhat improbable claim: "In one instance, during a Liberal filibuster in the Senate of Canada, Senator Philippe Gigantès was accused of reading one of his books only so that he could get the translation for free through the Hansard." This could be an interesting topic of research.</p>
 	<h5>11/23/22</h5>
