--- a/index.html
+++ b/index.html
@@ -51,7 +51,13 @@ margin-right:25%;
 		#subheader a {
 		color: white !important;	
 		}
-	
+	.sbs {
+		display:inline-block;
+		width:400px;
+		vertical-align:top";
+			background:lightgray;
+		
+			}
 
 .smoldate {
   font-size:11px;
@@ -251,9 +257,10 @@ I8,      ,8'
 																<img src="/assets/welcometv.gif" style="width:140px"></img>
 
 <h3>howdy! i am a high school senior in ohio. this is my personal website. :]</h3>	
-			
+		
 
-
+<div class="sbs">
+	
 <h5 class="sectionHeader">
 ~latest~
 	</h5>
@@ -316,7 +323,8 @@ I8,      ,8'
 						<span class="smoldate">2/17/2022</span>
 					</li> -->
 				</ul>
-			
+	</div>
+	<div class="sbs">
 			
 				<h5 class="sectionHeader">
 ~old stuff~
@@ -335,6 +343,7 @@ I8,      ,8'
 
 
 	</ul>
+	</div>
 							
 	<!--
 		<div id="microblogdiv" style="color:white;font-family: 'Times New Roman', Times, serif; background: linear-gradient(33deg, rgba(2,0,36,1) 0%, rgba(13,13,148,1) 100%);width:20%;margin-left:-15%;position:absolute;height:300px;overflow:scroll;padding:5px;">
