--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ margin-right:25%;
 	.sbs {
 		display:inline-block;
 		width:400px;
-		vertical-align:top";
+		vertical-align:top;
 			background:lightgray;
 		
 			}
