--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@ I8,      ,8'
 				<ul>
 										<li>
 						<span class="latestTag">Misc.</span>
-						<a href="notaryinfographic.png">Ohio notary public disciplinary process infographic</a>
+						<a href="notary.html">Ohio notary public disciplinary process infographic</a>
 						<span class="smoldate">August 2022</span>
 					</li>
 
