--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ margin-right:25%;
 		display:inline-block;
 		width:400px;
 		vertical-align:top;
-			background:lightgray;
+			background:darkseagreen;
 		
 			}
 
