--- a/notary.html
+++ b/notary.html
@@ -1,3 +1,3 @@
 <p>Ohio notary law is really cool. I put together this flowchart depicting the disciplinary process for an Ohio notary public accused of notarial misconduct. It is based on <a href="https://codes.ohio.gov/ohio-administrative-code/rule-111:6-1-07">Ohio Admin. Code § 111:6-1-07</a>.</p>
-<img src="notaryinfographic.png">
+<img src="notaryinfographic.png" style="width:100%">
 <small>Aug. 2022</small>
