--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@ I8,      ,8'
 
 																<img src="/assets/welcometv.gif" style="width:140px"></img>
 
-<h3>howdy! i am a high school senior in ohio. this is my personal website. :]</h3>	
+<h3>Howdy! I am a high school senior in Ohio. This is my personal website. :]</h3>	
 		
 
 <div class="sbs">
