--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@ I8,      ,8'
 	<ul>
 		<li><span class="latestTag">Skool</span> <a target="_BLANK" href="/old/campaign2/">campaign website 3</a> <span class="smoldate">5/2021</span></li>
 			<li><span class="latestTag">CS/Webdev</span> <a href="/cecilarchive">cecil letter archive project</a> <span class="smoldate">11/2018</span></li>
-		<li><span class="latestTag">Skool</span> <a target="_BLANK" href="/old/campaign1">campaign website 1</a> <span class="smoldate">10/2018</span></li>
+		<!-- <li><span class="latestTag">Skool</span> <a target="_BLANK" href="/old/campaign1">campaign website 1</a> <span class="smoldate">10/2018</span></li> -->
 	<li><span class="latestTag">CS/Webdev</span> <a href="cgol">Conway's Game of Life</a> <span class="smoldate">3/2018</span></li>
 	<li><span class="latestTag">CS/Webdev</span> <a href="https://github.com/junderw00d/HamLog">HamLog: amateur radio logging software</a> <span class="smoldate">3/2018</span></li>
 	<li><span class="latestTag">Misc.</span> <a href="/50states.html">50 states game</a> <span class="smoldate">2018</span></li>
