--- a/index.html
+++ b/index.html
@@ -196,17 +196,17 @@ I8,      ,8'
 				</table>
 			<div id="socialContainer">
 				<span><bold>socials: </bold></span>
-				<div class="social"><a href="https://discord.com/users/192057338830651392">discord</a></div>
+				<!--<div class="social"><a href="https://discord.com/users/192057338830651392">discord</a></div>-->
 				<div class="social"><a href="https://www.goodreads.com/user/show/153388050-j-u">goodreads</a></div>
 				<div class="social"><a href="https://instagram.com/junderwooood">instagram</a></div>
 				<div class="social"><a href="https://letterboxd.com/jayunder/">letterboxd</a></div>
-				<div class="social"><a href="https://www.pinterest.com/conjuredmeadows/">pinterest</a></div>
+				<!--<div class="social"><a href="https://www.pinterest.com/conjuredmeadows/">pinterest</a></div>-->
 
 				<div class="social"><a href="https://open.spotify.com/user/73avhoythh23c4thasadw72tz?si=b3a0f79c828946b5">spotify</a></div>
-				<div class="social"><a href="https://steamcommunity.com/id/conjuredmeadows">steam</a></div>
+				<!--<div class="social"><a href="https://steamcommunity.com/id/conjuredmeadows">steam</a></div>
 										<div class="social">tumblr</div>
 
-						<div class="social">twitter</div>
+						<div class="social">twitter</div>-->
 
 
 	</div>
@@ -221,7 +221,7 @@ I8,      ,8'
 			<img src="/assets/8831/aolim.gif">
 				<img src="/assets/8831/chrmevil.gif">
 
-			<img src="/assets/8831/atarilogo.gif">
+			<!--<img src="/assets/8831/atarilogo.gif">-->
 		<!-- <img src="/assets/8831/hsajesusveg.gif"> -->
 
 <img src="/assets/8831/copy_floppy.gif">
@@ -234,22 +234,22 @@ I8,      ,8'
 			<img src="/assets/8831/firefoxget.gif">
 					<img src="/assets/8831/anythingbutchrome.gif">
 
-	<img src="/assets/8831/ieburnbtn.gif">
+	<!--<img src="/assets/8831/ieburnbtn.gif">
 
-	<img src="/assets/8831/ienuke.gif">
+	<img src="/assets/8831/ienuke.gif">-->
 	<img src="/assets/8831/peace.gif">
-						<img src="/assets/8831/chill_pill.gif">
+		<!--				<img src="/assets/8831/chill_pill.gif">-->
 
 	<!--<img src="/assets/8831/twig.gif">-->
 		<img src="/assets/8831/wikipedia.gif">
-		<img src="/assets/8831/aladdinsane.png">
+		<!--<img src="/assets/8831/aladdinsane.png">-->
 				<img src="/assets/8831/bantt.gif">
 
 
 		<img src="/assets/8831/blm.png">
 
-	<img src="/assets/8831/steam.gif">
-<img src="/assets/8831/discord2.gif">
+	<!--<img src="/assets/8831/steam.gif">
+<img src="/assets/8831/discord2.gif">-->
 	
 	
 			</div>
