--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@ I8,      ,8'
 																<img src="/assets/welcometv.gif" style="width:140px"></img>
 
 <h3>Howdy! I am a high school senior in Ohio. This is my personal website. :]</h3>	
-		
+			<a href="https://www.arlingtonian.com/archives/author/jamesu">student journalism</a>
 
 <div class="sbs">
 	
@@ -368,15 +368,7 @@ I8,      ,8'
 				
 	</div>
 	
-				<h5 class="sectionHeader">
-~misc.~
-	</h5>
-		<ul>
-	
-			<li><a href="https://www.goodreads.com/user/show/153388050-james-u">goodreads</a></li>
-			<li><a href="https://www.arlingtonian.com/archives/author/jamesu">student journalism</a></li>
-
-		</ul>
+		
 		<h5 class="sectionHeader">~contact~</h5>
 		<img src="/assets/emailmegif.gif" style="width:80px">
 		<p class="cryptedmail"
