--- a/cemeteryphotography/index.html
+++ b/cemeteryphotography/index.html
@@ -45,10 +45,10 @@ color: white;
     <h1 style="font-size:3em;margin-bottom:0;">
       Cemetery Photography
     </h1>
-<blockquote>
+<!--<blockquote>
 &ldquo;The grave is but the threshold of eternity.&rdquo;
 </blockquote>
-<i>&mdash; <a href="https://en.wikipedia.org/wiki/Robert_Southey">Robert Southey</a>, 1796</i>
+<i>&mdash; <a href="https://en.wikipedia.org/wiki/Robert_Southey">Robert Southey</a>, 1796</i>-->
 <p>
   Yashica FR I &bull; Kodak Portra 400
     </p>
