--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@ I8,      ,8'
 <div id="div8831">
 		<!--	<img src="/assets/8831/anarchy1.gif"> -->
 			<img src="/assets/8831/aolim.gif">
-				<img src="/assets/8831/chrmevil.gif">
+				<!--<img src="/assets/8831/chrmevil.gif">-->
 
 			<!--<img src="/assets/8831/atarilogo.gif">-->
 		<!-- <img src="/assets/8831/hsajesusveg.gif"> -->
