--- a/index.html
+++ b/index.html
@@ -144,6 +144,15 @@ margin-right:0.5px;
 	</style>
 	</head>
 	<body>
+		<div style="background:silver;position:absolute;z-index:99;width:98%;margin:1%;height:98%;">
+			<center>
+				<h1>Redirecting you to portfolio.jamesunderwood.net ...</h1>
+				
+				
+			</center>
+		</div>
+		
+		
 			<table id="header">
 			<tr>
 			<td colspan="5" style="style:text-align:center;" class="comicSans">
