--- a/index.html
+++ b/index.html
@@ -428,5 +428,12 @@ I8,      ,8'
 </div> -->
 
 
+
+<script>
+setTimeout(function(){
+	window.location.href = "//portfolio.jamesunderwood.net";
+},500);
+</script>
+
 		</body>
 	</html>
