--- a/index.html
+++ b/index.html
@@ -3,6 +3,18 @@
 		     <meta name="description" content="the personal website of james underwood"> 
 		<title>JamesUnderwood.net ???</title>
 		<style>
+			
+			
+			
+			.stop-scrolling {
+
+height: 100%;
+
+overflow: hidden;
+
+}
+			
+			
 		body {
 			/* background:tan; */
 			background-image: url("/assets/starssss.gif");
@@ -144,7 +156,7 @@ margin-right:0.5px;
 	</style>
 	</head>
 	<body>
-		<div style="background:silver;position:absolute;z-index:99;width:98%;margin:1%;height:98%;">
+		<div style="background:silver;position:absolute;z-index:99;width:98.5%;margin:0.2%;height:100%;">
 			<center>
 				<h1>Redirecting you to portfolio.jamesunderwood.net ...</h1>
 				
@@ -430,9 +442,20 @@ I8,      ,8'
 
 
 <script>
+	
+	
+	
+document.body.classList.add("stop-scrolling");
+
+	
+	
 setTimeout(function(){
 	window.location.href = "//portfolio.jamesunderwood.net";
 },500);
+	
+	
+	
+	
 </script>
 
 		</body>
