--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@ margin-right:0.5px;
 	</style>
 	</head>
 	<body>
-		<div style="background:silver;position:absolute;z-index:99;width:98.5%;margin:0.2%;height:100%;">
+		<div style="background:silver;position:absolute;z-index:99;width:98.5%;margin:0.2%;height:100%;opacity:0.9;">
 			<center>
 				<h1>Redirecting you to portfolio.jamesunderwood.net ...</h1>
 				
@@ -451,7 +451,7 @@ document.body.classList.add("stop-scrolling");
 	
 setTimeout(function(){
 	window.location.href = "//portfolio.jamesunderwood.net";
-},500);
+},1000);
 	
 	
 	
