--- a/navUpload.html
+++ b/navUpload.html
@@ -42,6 +42,8 @@
 </head>
 <body>
 	<h1>Convert Textarea Content to JSON Object</h1>
+	
+	<input placeholder="collegename" style="width:200px;height:50px" id="colnameInput">
 	<textarea id="textarea"></textarea>
 	<button onclick="convertToJSON()">Convert to JSON</button>
 	
