--- a/navUpload.html
+++ b/navUpload.html
@@ -74,6 +74,14 @@ studentsHolding.push([element.actCompositeStudent, element.gpa]);
 
 console.log("done");
 }
+		
+		
+		function runThrough(name,decision){
+			
+		}
+		
+		
+		
 	</script>
 </body>
 </html>
