--- a/navUpload.html
+++ b/navUpload.html
@@ -64,7 +64,7 @@ studentsHolding.length = 0;
 			var jsonObj = JSON.parse(textareaContent);
 		
 
-console.log(runThrough("hahvad","deniedRD",jsonObj);
+console.log(runThrough("hahvad","deniedRD",jsonObj));
 
 	    
 	    	    document.getElementById("working").style.display = "none";
