--- a/navUpload.html
+++ b/navUpload.html
@@ -74,11 +74,12 @@
 		function runThrough(name,decisionType,obby){
 			
 			let array1 = obby.scattergrams.weightedGpa.act.apps[decisionType]; 
-array1.forEach(function(element){
-studentsHolding.push([element.actCompositeStudent, element.gpa, element.studentSAT1600Composite]);
-	return array1;
+let array2 = [];
+			array1.forEach(function(element){
+array2.push([element.actCompositeStudent, element.gpa, element.studentSAT1600Composite]);
 	
 });
+	return array2;
 			
 			
 			
