--- a/navUpload.html
+++ b/navUpload.html
@@ -71,12 +71,14 @@
 		
 		
 		
-		function runThrough(name,decisionType,obby){
+		function runThrough(sName,decisionType,obby){
 			
 			let array1 = obby.scattergrams.weightedGpa.act.apps[decisionType]; 
 let array2 = [];
 			array1.forEach(function(element){
-array2.push([element.actCompositeStudent, element.gpa, element.studentSAT1600Composite]);
+				
+				let toAdd = {"ACT":element.actCompositeStudent, "wGPA":element.gpa, "SAT":element.studentSAT1600Composite, "decision" + sName: decisionType};
+array2.push(toAdd);
 	
 });
 	return array2;
