--- a/navUpload.html
+++ b/navUpload.html
@@ -77,7 +77,7 @@
 let array2 = [];
 			array1.forEach(function(element){
 				
-				let toAdd = {"ACT":element.actCompositeStudent, "wGPA":element.gpa, "SAT":element.studentSAT1600Composite, "decision" + sName: decisionType};
+				let toAdd = {ACT:element.actCompositeStudent, wGPA:element.gpa, SAT:element.studentSAT1600Composite, ["decision" + sName]: decisionType};
 array2.push(toAdd);
 	
 });
