--- a/navUpload.html
+++ b/navUpload.html
@@ -45,10 +45,11 @@
 	
 	
 	<input placeholder="collegename" style="width:200px;height:50px" id="colnameInput">
-	
+	<br>
 	
 	<textarea id="textarea"></textarea>
-	<button onclick="convertToJSON()">Convert to JSON</button>
+	<br>
+	<button onclick="convertToJSON()">Push to masterDB</button>
 	
 	<h3 id="working" style="display:none;color:red">Working...</h3>
 	
