--- a/navUpload.html
+++ b/navUpload.html
@@ -99,6 +99,8 @@
 	    console.log(studentsHolding);
 	   masterDB.forEach(function(curVal,ind){
 		studentsHolding.forEach(function(laVruc,dni){
+			console.log(curVal);
+			console.log(laVruc);
 			if (curVal.ACT == laVruc.ACT && curVal.SAT == laVruc.SAT && curVal.wGPA == laVruc.wGPA) {
 			console.log ("duplicate");	
 			} else {
