--- a/navUpload.html
+++ b/navUpload.html
@@ -101,8 +101,11 @@
 		   let lecurVal = curVal;
 		   let leind = ind;
 		studentsHolding.forEach(function(laVruc,dni){
-			console.log("lecurval" + lecurVal);
-			console.log("lavruc" + laVruc);
+			console.log("lecruval");
+			console.log(lecurVal);
+						console.log("lavruc");
+
+			console.log(laVruc);
 			if (lecurVal.ACT == laVruc.ACT && lecurVal.SAT == laVruc.SAT && lecurVal.wGPA == laVruc.wGPA) {
 			console.log ("duplicate");	
 			} else {
