--- a/navUpload.html
+++ b/navUpload.html
@@ -99,6 +99,8 @@
 	    console.log(studentsHolding);
 	   masterDB.forEach(function(curVal,ind){
 		   let lecurVal = curVal;
+		   console.log("pure lercurval");
+		   console.log(curval);
 		   let leind = ind;
 		studentsHolding.forEach(function(laVruc,dni){
 			console.log("lecruval");
