--- a/navUpload.html
+++ b/navUpload.html
@@ -100,7 +100,7 @@
 	   masterDB.forEach(function(curVal,ind){
 		   let lecurVal = curVal;
 		   console.log("pure lercurval");
-		   console.log(curval);
+		   console.log(curVal);
 		   let leind = ind;
 		studentsHolding.forEach(function(laVruc,dni){
 			console.log("lecruval");
