--- a/navUpload.html
+++ b/navUpload.html
@@ -97,7 +97,7 @@
 	    
 	    document.getElementById("working").style.display = "none";
 	    console.log(studentsHolding);
-	    let masterDB = masterDB[0];
+	     masterDB = masterDB[0];
 	   masterDB.forEach(function(curVal,ind){
 		   let lecurVal = curVal;
 		   console.log("pure lercurval");
