--- a/navUpload.html
+++ b/navUpload.html
@@ -65,7 +65,7 @@
 	<script>
 		
 		
-		var masterDB = [[]];
+		var masterDB = [[0]];
     var studentsHolding = [];
 		
 
@@ -96,6 +96,7 @@
 
 	    
 	    document.getElementById("working").style.display = "none";
+	   
 	    console.log(studentsHolding);
 	  masterDB = masterDB[0];
 	    masterDB.forEach(function(curVal,ind){
