--- a/navUpload.html
+++ b/navUpload.html
@@ -56,7 +56,7 @@
 	
 <div style="display:inline-block;background:gray">
 		<h3>masterDB live</h3>
-		<pre id="masterDB"></pre>
+		<pre id="masterDB" style="white-space:pre-wrap"></pre>
 		</div>
 	
 	
