--- a/navUpload.html
+++ b/navUpload.html
@@ -50,11 +50,11 @@
 	<textarea id="textarea"></textarea>
 	<br>
 	<button onclick="convertToJSON()">Push to masterDB</button>
-	<br>
+	<br><br>
 	<h3 id="working" style="display:none;color:red">Working...</h3>
 	
 	
-<div style="display:inline-block;background:gray">
+<div style="background:gray">
 		<h3>masterDB live</h3>
 		<pre id="masterDB" style="white-space:pre-wrap"></pre>
 		</div>
