--- a/navUpload.html
+++ b/navUpload.html
@@ -41,7 +41,7 @@
 	</style>
 </head>
 <body>
-	<h1>Convert Textarea Content to JSON Object</h1>
+	<h1>compiler tool</h1>
 	
 	
 	<input placeholder="collegename" style="width:200px;height:50px" id="colnameInput">
