--- a/navUpload.html
+++ b/navUpload.html
@@ -64,10 +64,10 @@
 	
 	<script>
 		
-		if (localStorage.getItem("masterDB") === null) {
+		if (localStorage.getItem("master") === null) {
 					var masterDB = [[0]];
 		} else {
-			var masterDB = localStorage.getItem("masterDB")
+			var masterDB = localStorage.getItem("master")
 		}
     var studentsHolding = [];
 		
