--- a/navUpload.html
+++ b/navUpload.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Convert Textarea Content to JSON Object</title>
+	<title>compiler tool</title>
 	<style>
 		body {
 			font-family: Arial, sans-serif;
