--- a/navUpload.html
+++ b/navUpload.html
@@ -163,7 +163,8 @@ array2.push(toAdd);
 		
 		
 		function clearStorage() {
-								var masterDB = [[0]];
+			var masterDB = [[0]];
+			localStorage.setItem("master",null);
 		}
 		
 		
