--- a/navUpload.html
+++ b/navUpload.html
@@ -165,6 +165,7 @@ array2.push(toAdd);
 		function clearStorage() {
 			var masterDB = [[0]];
 			localStorage.setItem("master",null);
+			console.log("storage cleart");
 		}
 		
 		
