--- a/navUpload.html
+++ b/navUpload.html
@@ -62,7 +62,7 @@
 
 <br>
 		<pre id="masterDB" style="white-space:pre-wrap"></pre>
-			<button onclick="downloadCSVFromJson("download",masterDB)">download as CSV</button>
+			<button onclick="downloadCSVFromJson('compiled.csv',masterDB)">download as CSV</button>
 
 		</div>
 	
