--- a/navUpload.html
+++ b/navUpload.html
@@ -174,7 +174,7 @@ array2.push(toAdd);
 		
 		function clearStorage() {
 			var masterDB = [[0]];
-			localStorage.setItem("master",null);
+			localStorage.setItem("master","[[0]]");
 			console.log("storage cleart");
 		}
 		
