--- a/navUpload.html
+++ b/navUpload.html
@@ -176,6 +176,7 @@ array2.push(toAdd);
 			var masterDB = [[0]];
 			localStorage.setItem("master","[[0]]");
 			console.log("storage cleart");
+			window.location.reload();
 		}
 		
 		
