--- a/navUpload.html
+++ b/navUpload.html
@@ -125,7 +125,7 @@
 		    });
 		if (!duplicate) {
 			let laVrucMod = laVruc;
-			laVrucMod["decision" + colName] = "";
+			laVrucMod["decision" + colName] = "0";
 			masterDB.push(laVrucMod);
 			
 		}
