--- a/navUpload.html
+++ b/navUpload.html
@@ -124,9 +124,7 @@
 			}
 		    });
 		if (!duplicate) {
-			let laVrucMod = laVruc;
-			laVrucMod["decision" + colName] = "0";
-			masterDB.push(laVrucMod);
+			masterDB.push(laVruc);
 			
 		}
 	    });
