--- a/navUpload.html
+++ b/navUpload.html
@@ -183,14 +183,21 @@ array2.push(toAdd);
 		
 		
 		
-		downloadCSVFromJson = (filename, arrayOfJson) => {
+		downloadCSVFromJson = (filename, data) => {
   // convert JSON to CSV
-  const replacer = (key, value) => value === null ? '' : value // specify how you want to handle null values here
-  const header = Object.keys(arrayOfJson[0])
-  let csv = arrayOfJson.map(row => header.map(fieldName => 
-  JSON.stringify(row[fieldName], replacer)).join(','))
-  csv.unshift(header.join(','))
-  csv = csv.join('\r\n')
+ function convertToCSV(data) {
+  // Extract column headers from the first item in the array
+  const headers = Object.keys(data[0]);
+
+  // Build CSV string
+  let csv = headers.join(",") + "\n";
+  data.forEach((item) => {
+    csv += headers.map((header) => item[header] ?? "").join(",") + "\n";
+  });
+
+  return csv;
+}
+
 
   // Create link and download
   var link = document.createElement('a');
