--- a/navUpload.html
+++ b/navUpload.html
@@ -184,7 +184,7 @@ array2.push(toAdd);
 		
 		
   // convert JSON to CSV
- function convertToCSV(data) {
+ function downloadCSVFromJson(filename,data) {
   // Extract column headers from the first item in the array
   const headers = Object.keys(data[0]);
 
