--- a/cemeteryphotography/index.html
+++ b/cemeteryphotography/index.html
@@ -9,7 +9,7 @@ body {
   font-family: Century;
 }
 .over {
-  background: rgb(255, 255, 255, 0.25);
+  background: rgb(255, 255, 255, 0.7);
   margin:15px;
 padding-top:10px;
 padding-bottom:10px;
@@ -31,7 +31,7 @@ td p, td h1 {
 text-align:center;
 }
 a {
-color: white;
+color: black;
 }
 
 </style>
@@ -52,9 +52,9 @@ color: white;
 <p>
   Yashica FR I &bull; Kodak Portra 400
     </p>
-    <p>
+  <!--  <p>
       <small>Note: These images are compressed versions of the originals. Full-size versions available on request.</small>
-    </p>
+    </p> -->
 
   </div>
 
