--- a/cemeteryphotography/index.html
+++ b/cemeteryphotography/index.html
@@ -4,7 +4,7 @@
 <style>
 body {
   background-image: url("skulls.jpg");
-  color:white;
+  color:black;
   text-align:center;
   font-family: Century;
 }
