--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@ I8,      ,8'
 				<img src="/assets/8831/bantt.gif">
 
 
-		<img src="/assets/8831/blm.png">
+		<!--<img src="/assets/8831/blm.png">-->
 
 	<!--<img src="/assets/8831/steam.gif">
 <img src="/assets/8831/discord2.gif">-->
