--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 	<head>
 		     <meta name="description" content="the personal website of james underwood"> 
-		<title>JamesUnderwood.net ???</title>
+		<title>JamesUnderwood.net</title>
 		<style>
 			
 			
