--- a/summer23/index.html
+++ b/summer23/index.html
@@ -50,7 +50,7 @@
   <div class="flex-item">1</div>
   <div class="flex-item">1</div>
   <div class="flex-item">1</div>
-  <div class="flex-item">1</div><div class="flex-container">
+  <div class="flex-item">1</div>
   <div class="flex-item">1</div>
     <div class="flex-item">1</div>
   <div class="flex-item">1</div>
@@ -58,7 +58,7 @@
   <div class="flex-item">1</div>
   <div class="flex-item">1</div>
   <div class="flex-item">1</div>
-  <div class="flex-item">1</div><div class="flex-container">
+  <div class="flex-item">1</div>
   <div class="flex-item">1</div>
     <div class="flex-item">1</div>
   <div class="flex-item">1</div>
