--- a/bamn/index.html
+++ b/bamn/index.html
@@ -18,6 +18,7 @@
 </head>
 
 <body>
-  <h1 style="font-size:3em;">Become a Notary</h1>
+  <h1 style="font-size:5em;text-align:center;" class="sans">Become a Notary</h1>
+   <h2 style="font-size:2.5em;text-align:center;">Become a Montary notary. For just $19.</h2>
 </body>
   </html>
