--- a/bamn/index.html
+++ b/bamn/index.html
@@ -11,6 +11,11 @@
     .sans {
           font-family: 'Libre Franklin', sans-serif;
     }
+     .button {
+      background:rgb(55, 117, 184);
+        color:white;
+        padding:5px;
+     }
     
   </style>
   
@@ -20,5 +25,7 @@
 <body>
   <h1 style="font-size:5em;text-align:center;" class="sans">Become a Notary</h1>
    <h2 style="font-size:2.5em;text-align:center;">Become a Montary notary. For just $19.</h2>
+   <a class="button">Get started</a>
+   
 </body>
   </html>
