--- a/bamn/index.html
+++ b/bamn/index.html
@@ -24,7 +24,7 @@
 
 <body>
   <h1 style="font-size:5em;text-align:center;" class="sans">Become a Notary</h1>
-   <h2 style="font-size:2.5em;text-align:center;">Become a Montary notary. For just $19.</h2>
+   <h2 style="font-size:2.5em;text-align:center;">Learn everything you need to know to become a Montana notary. For just $19.</h2>
    <a class="button">Get started</a>
    
 </body>
