--- a/bamn/index.html
+++ b/bamn/index.html
@@ -16,6 +16,30 @@
         color:white;
         padding:5px;
      }
+     
+     .topnav {
+  overflow: hidden;
+  background-color: #333;
+}
+
+.topnav a {
+  float: left;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.topnav a.active {
+  background-color: #04AA6D;
+  color: white;
+}
     
   </style>
   
@@ -23,6 +47,13 @@
 </head>
 
 <body>
+   
+   <div class="topnav">
+  <a class="active" href="#home">Home</a>
+  <a href="#contact">Contact</a>
+  <a href="#about">About</a>
+</div>
+   
   <h1 style="font-size:5em;text-align:center;" class="sans">Become a Notary</h1>
    <h2 style="font-size:2.5em;text-align:center;">Learn everything you need to know to become a Montana notary. For just $19.</h2>
    <a class="button">Get started</a>
