--- a/bamn/index.html
+++ b/bamn/index.html
@@ -14,7 +14,11 @@
      .button {
       background:rgb(55, 117, 184);
         color:white;
-        padding:5px;
+        padding:12px;
+        border-radius:10px;
+                  font-family: 'Libre Franklin', sans-serif;
+        font-weight: 700;
+
      }
      
      .topnav {
@@ -41,6 +45,9 @@
   color: white;
 }
     
+     .center {
+      text-align:center;  
+     }
   </style>
   
 
@@ -56,7 +63,7 @@
    
   <h1 style="font-size:5em;text-align:center;" class="sans">Become a Notary</h1>
    <h2 style="font-size:2.5em;text-align:center;">Learn everything you need to know to become a Montana notary. For just $19.</h2>
-   <a class="button">Get started</a>
+   <a class="button center">Get started</a>
    
 </body>
   </html>
