--- a/bamn/index.html
+++ b/bamn/index.html
@@ -18,7 +18,7 @@
         border-radius:10px;
                   font-family: 'Libre Franklin', sans-serif;
         font-weight: 700;
-
+font-size:1em;
      }
      
      .topnav {
