--- a/bamn/index.html
+++ b/bamn/index.html
@@ -64,7 +64,7 @@ font-size:1em;
   <a href="#about">About</a>
 </div>
    
-  <h1 style="font-size:5em;text-align:center;" class="sans">Become a Notary</h1>
+  <h1 style="font-size:5em;text-align:center;margin:5px;" class="sans">Become a Notary</h1>
    <h2 style="font-size:2.5em;text-align:center;">Learn everything you need to know to become a Montana notary. For just $19.</h2>
    <a class="button center">Get started</a>
    
